Increase timeout during deployment initiated stop

XMLWordPrintableJSON

    • Atlas Streams
    • Fully Compatible
    • Sprint 67
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      We frequently observe timeouts during stop in production, often during deployments: see this splunk.

      Increase timeout of deployment initiated stop from 3 minutes to 6 minutes. See StreamManager::stopAllStreamProcessors.

            Assignee:
            Matthew Normyle
            Reporter:
            Matthew Normyle
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: