SERVER-100552: Increase timeout during deployment initiated stop (#32097)

We frequently observe timeouts during stop in production, often during
deployments. The root cause is a large backlog in the sink queue that
takes a long time to flush. We will fix this more broadly in
https://jira.mongodb.org/browse/SERVER-92496. For now, increasing the
deployment initiated stop timeout from 3 minutes to 6 minutes.